# EC-comparator

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
AmpliconComparison/: configs.py  main.py
AmpliconComparison/metrics/: amplicon_similarity.py  breakpoints.py  compare.py  distances.py  features.py
AmpliconComparison/utils/: cycles_to_bed_modified.py  generate_pairs.py  perturb.py  report.py  utils.py  viz.py
eccomparator/: configs.py  main.py
eccomparator/metrics/: breakpoints.py  compare.py  distances.py  features.py
eccomparator/utils/: aggregate.py  generate_pairs.py  perturb.py  report.py  utils.py  viz.py
examples/ecdna0/: s1.bed  s2.bed
examples/ecdna1/: reconstructed.bed  true.bed
examples/ecdna10/: reconstructed_format.bed
examples/ecdna11/: reconstructed_format.bed  reconstructed_format2.bed
examples/ecdna12/: reconstructed_format.bed  true_format.bed
examples/ecdna13/: reconstructed_format.bed  true_format.bed
examples/ecdna13_reshuffled/: reconstructed_format.bed  true_format.bed  true_format_acyclic.bed  true_format_reverse.bed  true_format_reverse_wrong.bed  true_format_rotate.bed
examples/ecdna15/: reconstruct.bed  true.bed
examples/ecdna2/: reconstructed_format1.bed  reconstructed_format2.bed  true_format.bed
examples/ecdna3/: reconstructed_format1.bed  reconstructed_format2.bed  true_format.bed
examples/ecdna4/: true_format.bed
examples/ecdna5/: reconstructed_format.bed  true_format.bed
src/: configs.py  main.py  metrics.py  perturb.py  utils.py  viz.py
src/metrics/: breakpoints.py  (+3 more)
(+37 files in other folders)
